# tannner-python

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  makefile  setup.cfg  setup.py  start-jupyterlab.sh
notes/: bash.md  dummy.txt  git.md  markdown.md
src/tannner_python/: __init__.py  calculator.py  errors.py  hangman.py  schoolgrade.py  scratch.ipynb  tic-tac-toe.py
tests/: conftest.py
tests/fixtures/: __init__.py  general_fixtures.py
tests/functional_tests/: __init__.py
tests/unit_tests/: __init__.py
