[metadata]
name = tannner-python
author = Tanner Wakefield
author_email = 23wakeftanc@washk12.org
home_page = https://bitbucket.org/bengrouptech/tannner-python
description = Add a short description here!
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Proprietary
license_file = LICENSE.txt
keywords = <Add keywords here>

# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Beta
    Intended Audience :: All Developers
    Natural Language :: English
    Topic :: Software Development :: Common :: Tool
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
test_suite = tests/unit_tests
python_requires =  >= 3.6.*
install_requires =
    importlib-metadata; python_version<"3.8"

[options.extras_require]
doc =
    docutils<0.17
test =
    pytest
    pytest-runner
    pytest-cov
dev =
    twine
    xonsh
    %(cli)s
    %(doc)s
    %(test)s
    %(lint)s

# Remove this option and the projects cli folder if the
# project has no command line interface
[options.entry_points]
console_scripts =
    tannner_python = tannner_python.cli.tannner_python_cli:main

[options.packages.find]
where=src
exclude =
    tests

# [options.data_files]
# optional data files

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[pyscaffold]
version = 4.0.2
package = tannner_python
extensions = 
    ben_extension

[tool:pytest]
markers =
    foundational: Tests that must pass for subsequent tests to run.
    slow: Tests that take a long time to execute
